--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ pydantic_core==2.23.4
 pyngrok==7.2.0
 pypdfium2==4.30.0
 pyperclip==1.9.0
+python-multipart==0.0.17
 PyYAML==6.0.2
 sniffio==1.3.1
 starlette==0.41.2
